Replace String.isBlank method with trim() and isEmpty()